--- a/Sembly/android/app/src/main/AndroidManifest.xml
+++ b/Sembly/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <application
       android:name=".MainApplication"
       android:allowBackup="true"
+      android:debuggable="true"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:theme="@style/AppTheme">
